[package]
name = "macro-ex-004"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["mymacro"]

[dependencies]
mymacro = {path = "./mymacro"}
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
